--- a/Model.ipynb
+++ b/Model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,14 +402,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ayush\\AppData\\Local\\Temp\\ipykernel_9872\\1014313707.py:2: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\ayush\\AppData\\Local\\Temp\\ipykernel_10072\\1014313707.py:2: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +718,7 @@
        "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +771,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -825,7 +825,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -833,6 +833,243 @@
    "source": [
     "# Chrcking the nan values \n",
     "df.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>customerID</th>\n",
+       "      <th>SeniorCitizen</th>\n",
+       "      <th>tenure</th>\n",
+       "      <th>MonthlyCharges</th>\n",
+       "      <th>TotalCharges</th>\n",
+       "      <th>Churn</th>\n",
+       "      <th>gender_Male</th>\n",
+       "      <th>Partner_Yes</th>\n",
+       "      <th>Dependents_Yes</th>\n",
+       "      <th>PhoneService_Yes</th>\n",
+       "      <th>...</th>\n",
+       "      <th>StreamingTV_No internet service</th>\n",
+       "      <th>StreamingTV_Yes</th>\n",
+       "      <th>StreamingMovies_No internet service</th>\n",
+       "      <th>StreamingMovies_Yes</th>\n",
+       "      <th>Contract_One year</th>\n",
+       "      <th>Contract_Two year</th>\n",
+       "      <th>PaperlessBilling_Yes</th>\n",
+       "      <th>PaymentMethod_Credit card (automatic)</th>\n",
+       "      <th>PaymentMethod_Electronic check</th>\n",
+       "      <th>PaymentMethod_Mailed check</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7038</th>\n",
+       "      <td>6840-RESVB</td>\n",
+       "      <td>0</td>\n",
+       "      <td>24</td>\n",
+       "      <td>84.80</td>\n",
+       "      <td>1990.50</td>\n",
+       "      <td>0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7039</th>\n",
+       "      <td>2234-XADUH</td>\n",
+       "      <td>0</td>\n",
+       "      <td>72</td>\n",
+       "      <td>103.20</td>\n",
+       "      <td>7362.90</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7040</th>\n",
+       "      <td>4801-JZAZL</td>\n",
+       "      <td>0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>29.60</td>\n",
+       "      <td>346.45</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7041</th>\n",
+       "      <td>8361-LTMKD</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>74.40</td>\n",
+       "      <td>306.60</td>\n",
+       "      <td>1</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7042</th>\n",
+       "      <td>3186-AJIEK</td>\n",
+       "      <td>0</td>\n",
+       "      <td>66</td>\n",
+       "      <td>105.65</td>\n",
+       "      <td>6844.50</td>\n",
+       "      <td>0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 32 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      customerID  SeniorCitizen  tenure  MonthlyCharges  TotalCharges  Churn  \\\n",
+       "7038  6840-RESVB              0      24           84.80       1990.50      0   \n",
+       "7039  2234-XADUH              0      72          103.20       7362.90      0   \n",
+       "7040  4801-JZAZL              0      11           29.60        346.45      0   \n",
+       "7041  8361-LTMKD              1       4           74.40        306.60      1   \n",
+       "7042  3186-AJIEK              0      66          105.65       6844.50      0   \n",
+       "\n",
+       "      gender_Male  Partner_Yes  Dependents_Yes  PhoneService_Yes  ...  \\\n",
+       "7038         True         True            True              True  ...   \n",
+       "7039        False         True            True              True  ...   \n",
+       "7040        False         True            True             False  ...   \n",
+       "7041         True         True           False              True  ...   \n",
+       "7042         True        False           False              True  ...   \n",
+       "\n",
+       "      StreamingTV_No internet service  StreamingTV_Yes  \\\n",
+       "7038                            False             True   \n",
+       "7039                            False             True   \n",
+       "7040                            False            False   \n",
+       "7041                            False            False   \n",
+       "7042                            False             True   \n",
+       "\n",
+       "      StreamingMovies_No internet service  StreamingMovies_Yes  \\\n",
+       "7038                                False                 True   \n",
+       "7039                                False                 True   \n",
+       "7040                                False                False   \n",
+       "7041                                False                False   \n",
+       "7042                                False                 True   \n",
+       "\n",
+       "      Contract_One year  Contract_Two year  PaperlessBilling_Yes  \\\n",
+       "7038               True              False                  True   \n",
+       "7039               True              False                  True   \n",
+       "7040              False              False                  True   \n",
+       "7041              False              False                  True   \n",
+       "7042              False               True                  True   \n",
+       "\n",
+       "      PaymentMethod_Credit card (automatic)  PaymentMethod_Electronic check  \\\n",
+       "7038                                  False                           False   \n",
+       "7039                                   True                           False   \n",
+       "7040                                  False                            True   \n",
+       "7041                                  False                           False   \n",
+       "7042                                  False                           False   \n",
+       "\n",
+       "      PaymentMethod_Mailed check  \n",
+       "7038                        True  \n",
+       "7039                       False  \n",
+       "7040                       False  \n",
+       "7041                        True  \n",
+       "7042                       False  \n",
+       "\n",
+       "[5 rows x 32 columns]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.tail()"
    ]
   },
   {
